[package]
name = "romkan"
version = "0.2.1"
authors = ["Tianyi Shi <ShiTianyi2001@outlook.com>"]
description = "A Romaji/Kana conversion library written in pure Rust, based on [python-romkan](https://github.com/soimort/python-romkan)"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
regex = "1.5.4"
phf = { version = "0.9", features = ["macros"] }